--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-
+  <meta http-equiv="Content-Security-Policy" content="img-src * data: blob:; default-src * data:; style-src * 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCd1nS4vaKT5cU5UcbPlUP3ZR4OaSwQLGk"></script>
 </head>
 
 <body>
