--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" crossorigin=""></script>
 </body>
 
 </html>
