--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta http-equiv="Content-Security-Policy" content="img-src * data: blob:; default-src * data:; style-src * 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
