--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyCd1nS4vaKT5cU5UcbPlUP3ZR4OaSwQLGk"></script>
 </head>
 
